--- a/_includes/2016_data/head.html
+++ b/_includes/2016_data/head.html
@@ -18,7 +18,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-80562835-1', 'auto');
+        ga('create', 'UA-xxxxxxxx-x', 'auto');
         ga('send', 'pageview');
     </script>
     <!--Google Analytics SCRIPT END-->
